--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,13 @@
 body {}
 
+img.emoji {
+   height: 1em;
+   width: 1em;
+   margin: 0 .05em 0 .1em;
+   vertical-align: -0.1em;
+  pointer-events: none; 
+}
+
 h1,
 p.checkBack,
 p.bottomText {
@@ -7,6 +15,79 @@ p.bottomText {
   font-family: Jost, sans-serif;
   text-align: center;
 }
+
+div.langWrapper{
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.lang{
+  color: white;
+  font-family: Jost, sans-serif;
+  background-color: rgba(0, 0, 0, 0.327);
+  padding: 12px;
+  text-decoration: none;
+  border-radius: 12px;
+  width: moz-fit-content;
+  width: fit-content;
+  height: moz-fit-content;
+  height: fit-content;
+  border: none;
+  font-size: initial;
+  cursor: pointer;
+  transition: background-color .2s;
+}
+
+/* Dropdown button on hover & focus */
+.lang:hover, .lang:focus {
+  background-color: rgba(0, 0, 0, 0.476);
+  transition: background-color .2s;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: absolute;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdownContent {
+  display: none;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.327);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  right: 0;
+  border-radius: 12px;
+}
+
+/* Links inside the dropdown */
+.dropdownContent a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  color: white;
+  font-family: Jost, sans-serif;
+  padding: 12px;
+  text-decoration: none;
+  border-radius: 12px;
+  border: none;
+  font-size: initial;
+  cursor: pointer;
+  transition: background-color .2s;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: rgba(0, 0, 0, 0.476);
+  transition: background-color .2s;
+}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
 
 h1{
   font-weight: bold;
