Improved the language switcher UI

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -39,6 +39,7 @@ div.langWrapper{
 
 .dropButton{
   border-radius: 12px 12px 12px 12px;
+  min-width: 166px;
 }
 
 .dropButtonPressed{
@@ -95,7 +96,7 @@ div.langWrapper{
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {
   display:block;
-  
+  min-width: 166px;
 }
 
 
