--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -96,7 +96,7 @@ div.langWrapper{
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {
   display:block;
-  min-width: 166px;
+  width: 166px;
 }
 
 
