--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -88,11 +88,14 @@ div.langWrapper{
 }
 
 /*Styling for the language slector button on hover and focus */
-.lang:hover, .lang:focus {
+.lang:hover, .lang:focus, .navButton:hover, .navButton:focus {
   background-color: rgba(0, 0, 0, 0.476);
   transition: background-color .2s;
 }
 
+.activeChoice, .dropButtonPressed{
+  background-color: #000000;
+}
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: absolute;
@@ -103,7 +106,7 @@ div.langWrapper{
 .dropdownContent {
   display: none;
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.327);
+  background-color: rgb(0, 0, 0);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -113,7 +116,8 @@ div.langWrapper{
 
 /* Links inside the dropdown */
 .dropdownContent a {
-  color: black;
+  background-color: rgba(0, 0, 0, 0.476);
+  transition: background-color .2s;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -129,8 +133,8 @@ div.langWrapper{
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: rgba(0, 0, 0, 0.476);
+.dropdownContent a:hover {
+  background-color: rgba(67, 67, 67, 0.476);
   transition: background-color .2s;
 }
 
