--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -141,6 +141,7 @@ div.langWrapper{
   font-size: initial;
   cursor: pointer;
   transition: background-color .2s;
+  font-size: initial;
 }
 
 .navButton{
