--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -142,6 +142,7 @@ div.langWrapper{
   cursor: pointer;
   transition: background-color .2s;
   font-size: initial;
+  touch-action: manipulation;
 }
 
 .navButton{
