--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -133,9 +133,9 @@ div.langWrapper{
   background-color: rgba(0, 0, 0, 0.327);
   padding: 12px;
   text-decoration: none;
-  width: moz-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
-  height: moz-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   border: none;
   font-size: initial;
@@ -249,9 +249,9 @@ p.bottomText{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: moz-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
-  height: moz-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   padding-left: 5%;
   padding-right: 5%;
