Improved support for older browsers

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -30,6 +30,10 @@ body{
   height: fit-content;
 }
 
+.gradientBackgroundAnimation{
+  background: #710a97;
+}
+
 /*Scales down emojis*/
 img.emoji {
    height: 1em;
