--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -16,9 +16,9 @@ body {}
 }
 
 /*Scales down emojis*/
-img.emoji, span.emoji {
-  height: 16px;
-  width: 16px;
+img.emoji{
+  height: 1em;
+  width: 1em;
   margin: 0 .05em 0 .1em;
   vertical-align: -0.1em;
  pointer-events: none; 
