Made auto-jump scrolling smoother

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,6 @@
-body {}
+html {
+  scroll-behavior: smooth;
+}
 
 /*Import the local Jost font files instead of using Google Fonts to use them*/
 @font-face {
