--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -32,7 +32,7 @@ header{
   position: sticky;
   -webkit-backdrop-filter: saturate(180%) blur(20px); 
   backdrop-filter: saturate(180%) blur(20px); 
-  top: 0;
+  top: 0px;
   margin: 12px;
   padding: 12px;
   border-radius: 12px;
@@ -46,6 +46,44 @@ body{
   background: #710a97;
 }
 
+main{
+  margin: 18px;
+}
+
+.centerer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+}
+
+.cvButton{
+  color: white;
+  font-family: Jost, sans-serif;
+  background-color: #120218;
+  background-color: #12021880;
+  border: #120218 2px solid;
+  border: #12021880 2px solid;
+  padding: 12px;
+  text-decoration: none;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  font-size: initial;
+  cursor: pointer;
+  transition: background-color .2s;
+  font-size: initial;
+  touch-action: manipulation;
+  border-radius: 12px;
+}
+
+.cvButton:hover, .cvButton:focus{
+  background-color: #120218;
+  background-color: #120218db;
+  transition: background-color .2s;
+}
+
 /*Styling for general text*/
 h1,
 p, a{
@@ -55,7 +93,15 @@ p, a{
 }
 
 p.subTitle{
-  color: rgb(182, 182, 182);
+  color: rgb(203, 203, 203);
+}
+
+p.subTitleExp{
+  color: rgb(180, 180, 180);
+}
+
+div.education, div.work{
+  padding-top: 12px;
 }
 
 div.project{
@@ -131,7 +177,7 @@ div.langWrapper{
   flex-direction: row-reverse;
 }
 
-.navWrapper{
+.p404Wrapper, .navWrapper{
   display: flex;
 }
 
@@ -426,8 +472,15 @@ div.socialMedias{
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  -webkit-backdrop-filter: saturate(180%) blur(20px); 
-  backdrop-filter: saturate(180%) blur(20px); 
+  -webkit-backdrop-filter: blur(20px); 
+  backdrop-filter: blur(20px); 
+}
+
+p.titleEmail{
+  font-size: larger;
+  background-color: #262626;
+  padding: 12px;
+  border-radius: 12px;
 }
 
 .showEmail{
@@ -439,10 +492,7 @@ div.socialMedias{
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(18, 18, 18, 0.83); /* Black w/ opacity */
-  -webkit-backdrop-filter: saturate(180%) blur(20px); 
-  backdrop-filter: saturate(180%) blur(20px); 
+  background-color: rgba(18, 18, 18);
   padding: 12px;
   margin: 12px;
   border-radius: 12px;
@@ -457,28 +507,28 @@ div.socialMedias{
   margin: 12px;
 }
 
-
 .emailOK{
   color: white;
   font-family: Jost, sans-serif;
-  background-color: #120218;
-  background-color: #12021880;
-  border: #120218 2px solid;
-  border: #12021880 2px solid;
+  background-color: #0e0e0e;
+  border: #242424 2px solid;
   padding: 12px;
   font-size: initial;
   cursor: pointer;
 }
 
 .buttonsEmail{
-  background-color: #2100;
-  background-color: #21002d;
+  background-color: #191919;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   border-radius: 12px;
+}
+
+p.emailText{
+  margin: 12px;
 }
 
 /*Keyframes for the animation*/
