--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -132,6 +132,7 @@ div.project>div{
   display: flex;
   justify-content: center;
   align-self: center;
+  align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
   background-color: #000000;
