--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -594,6 +594,9 @@ div.footer{
   flex-direction: column;
   justify-content: center;
   align-self: center;
+  max-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .aboutMeContainer{
