--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -594,9 +594,8 @@ div.footer{
   flex-direction: column;
   justify-content: center;
   align-self: center;
-  max-width: 80%;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .aboutMeContainer{
@@ -629,6 +628,8 @@ div.footer{
   padding: 12px;
   margin: 12px;
   text-align: center;
+  background-color: #12021880;;
+  border-radius: 12px;
 }
 
 span.title{
