--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -392,16 +392,16 @@ div.mobileMenu>a{
 }
 
 .threads{
-  background-color: #202020;
-  background-color: #20202080;
-  border: #3e3e3e 2px solid;
-  border: #3e3e3e80 2px solid;
+  background-color: #000000;
+  background-color: #00000080;
+  border: #000000 2px solid;
+  border: #00000080 2px solid;
   transition: background-color 0.2s;
 }
 
 .threads:hover{
-  background-color: #000000;
-  background-color: #000000c7;
+  background-color: #090909;
+  background-color: #09090980;
   transition: background-color 0.2s;
 }
 
