--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -512,15 +512,13 @@ div.socialMedias{
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgba(0,0,0,0.75); /* Black w/ opacity */
   -webkit-backdrop-filter: blur(20px); 
   backdrop-filter: blur(20px); 
 }
 
 p.titleEmail{
-  font-size: larger;
-  background-color: #262626;
-  padding: 12px;
+  font-size: 1.4em;
   border-radius: 12px;
 }
 
@@ -551,8 +549,11 @@ p.titleEmail{
 .emailOK{
   color: white;
   font-family: Jost, sans-serif;
-  background-color: #0e0e0e;
-  border: #242424 2px solid;
+  background-color: #4b4b4b;
+  background-color: #4b4b4b80;
+  border: #4b4b4b 2px solid;
+  border: #4b4b4b80 2px solid;
+  transition: background-color 0.2s;
   padding: 12px;
   font-size: initial;
   cursor: pointer;
@@ -566,6 +567,11 @@ p.titleEmail{
   align-items: center;
   flex-wrap: wrap;
   border-radius: 12px;
+}
+
+.emailOK:hover{
+  background-color: #4b4b4bc7;
+  transition: background-color 0.2s;
 }
 
 p.emailText{
